--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,13 +41,13 @@ jobs:
         working-directory: ${{github.workspace}}/user_test
         run: |
           g++ -c ${{github.workspace}}/misc/ci_test_file.cpp $(pkg-config --cflags mygl) -DMYGL_STATIC_DEFINE
-          g++ ci_test_file.o -o test ${{github.workspace}}/install/lib/x86_64-linux-gnu/libmygl.a -L${{github.workspace}}/install/lib/x86_64-linux-gnu/ -lglfw -lfreetype -ldl -lpthread
+          g++ ci_test_file.o -o test ${{github.workspace}}/install/lib/x86_64-linux-gnu/libmygl.a -L${{github.workspace}}/install/lib/x86_64-linux-gnu/ -lglfw3 -lfreetype -ldl -lpthread
 
       - name: Check compilation against shared libs
         working-directory: ${{github.workspace}}/user_test
         run: |
           g++ -c ${{github.workspace}}/misc/ci_test_file.cpp $(pkg-config --cflags mygl)
-          g++ ci_test_file.o -o test -L${{github.workspace}}/install/lib/x86_64-linux-gnu/ -lmygl -lglfw -lfreetype -ldl -lpthread
+          g++ ci_test_file.o -o test -L${{github.workspace}}/install/lib/x86_64-linux-gnu/ -lmygl -lglfw3 -lfreetype -ldl -lpthread
 
   windows-build:
     runs-on: windows-latest
