Updated the documentation - Updated dowygen-awesome to 2.3.2 - Modified the markdown sources to use Meson instead of CMake - Added an option to only build the documentation

--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -21,9 +21,7 @@ jobs:
           sudo pip3 install meson
 
       - name: Configure meson
-        run: |
-          meson wrap update-db 
-          meson setup --prefix=${{github.workspace}}/install -Dmygl_build_doc=true build
+        run: meson setup build --prefix=${{github.workspace}}/install -Dmygl_docs_only=true
 
       - name: Generate the documentation pages
         working-directory: ${{github.workspace}}/build
