--- a/meson.build
+++ b/meson.build
@@ -3,27 +3,27 @@ project('MyGL', 'c', 'cpp',
         version: '0.1.0',
         default_options: ['cpp_std=c++17'])
 
-
-subdir('src')
 subdir('include')
 
-if get_option('mygl_build_examples')
-  subdir('examples')
+if not get_option('mygl_docs_only')
+  subdir('src')
+
+  if get_option('mygl_build_examples')
+    subdir('examples')
+  endif
+
+  pkgc = import('pkgconfig')
+  pkgc.generate(
+    mygl,
+    name: 'mygl',
+    version: meson.project_version(),
+    description: 'A little graphics library',
+    url: 'https://github.com/tretre91/MyGL',
+    subdirs: ['MyGL'],
+    requires: ['glfw3', 'freetype2']
+  )
 endif
 
-if get_option('mygl_build_doc')
+if get_option('mygl_build_docs') or get_option('mygl_docs_only')
   subdir('docs')
 endif
-
-# installation
-pkgc = import('pkgconfig')
-pkgc.generate(
-  mygl,
-  name: 'mygl',
-  version: meson.project_version(),
-  description: 'A little graphics library',
-  url: 'https://github.com/tretre91/MyGL',
-  subdirs: ['MyGL'],
-  requires: ['glfw3', 'freetype2']
-)
-
