Fix a wrong package name in the update docs CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
       - include/**
       - examples/**
       - misc/ci_test_file.cpp
-      - .github/workflows/**
+      - .github/workflows/build.yml
 
 jobs:
   linux-build:
