--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
 
     env:
         PKG_CONFIG_PATH: ${{github.workspace}}/install/lib/x86_64-linux-gnu/pkgconfig
+        CC: gcc-13
 
     steps:
       - uses: actions/checkout@v4
