--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,8 +79,8 @@ jobs:
         working-directory: ${{github.workspace}}/user_test
         run: |
           cp ${{github.workspace}}/install/bin/*.dll .
-          cl ${{github.workspace}}/misc/ci_test_file.cpp glfw3.lib freetype.lib opengl32.lib gdi32.lib user32.lib shell32.lib winmm.lib /MD /Fe:test /std:latest /I ${{github.workspace}}/install/include /I ${{github.workspace}}/install/include/MyGL /I ${{github.workspace}}/install/include/freetype2 /D MYGL_STATIC /link /LIBPATH:${{github.workspace}}/install/lib libmygl.a
+          cl ${{github.workspace}}/misc/ci_test_file.cpp glfw3.lib freetype.lib opengl32.lib gdi32.lib user32.lib shell32.lib winmm.lib /MD /Fe:test /std:c++latest /I ${{github.workspace}}/install/include /I ${{github.workspace}}/install/include/MyGL /I ${{github.workspace}}/install/include/freetype2 /D MYGL_STATIC /link /LIBPATH:${{github.workspace}}/install/lib libmygl.a
       
       - name: Check compilation against shared libs
         working-directory: ${{github.workspace}}/user_test
-        run: cl ${{github.workspace}}/misc/ci_test_file.cpp mygl.lib glfw3.lib freetype.lib opengl32.lib gdi32.lib user32.lib shell32.lib winmm.lib /MD /Fe:test /std:latest /I ${{github.workspace}}/install/include /I ${{github.workspace}}/install/include/MyGL /I ${{github.workspace}}/install/include/freetype2 /link /LIBPATH:${{github.workspace}}/install/lib
+        run: cl ${{github.workspace}}/misc/ci_test_file.cpp mygl.lib glfw3.lib freetype.lib opengl32.lib gdi32.lib user32.lib shell32.lib winmm.lib /MD /Fe:test /std:c++latest /I ${{github.workspace}}/install/include /I ${{github.workspace}}/install/include/MyGL /I ${{github.workspace}}/install/include/freetype2 /link /LIBPATH:${{github.workspace}}/install/lib
